--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Eventually by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-<head>
-<title>Syed Azman - Data Ninja</title>
-</head>
-<body>
+	<head>
+		<title>Syed Azman - Data & Business Intelligence Assistance</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="is-preload">
 
-<h1>This will be my portfolio page</h1>
-<p>Cepat siapkan Azman.</p>
+		<!-- Header -->
+			<header id="header">
+				<h1>Coming Soon</h1>
+				<p>Watch this space. Something's brewing. A passion project by Syed Azman</p>
+			</header>
 
-</body>
+		<!-- Signup Form -->
+			<!-- <form id="signup-form" method="post" action="#">
+				<input type="email" name="email" id="email" placeholder="Email Address" />
+				<input type="submit" value="Sign Up" />
+			</form> -->
+
+		<!-- Footer -->
+			<footer id="footer">
+				<ul class="icons">
+					<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
+					<li><a href="https://www.instagram.com/syedazman_/" target=_blank class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://github.com/sazman1220" target=_blank class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/in/syedazman/" target=_blank class="icon brands fa-linkedin"><span class="label">Email</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; Syed Azman. Bringing Inteligence into Your Business.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+			</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
